# orchestra

./: .env.example  .gitignore  MODEL_POLICY.md  README.md  USAGE.md  justfile  litellm.yaml  pyproject.toml
config/: executors.toml  pricing.toml  providers.toml  roles.toml  routing.toml
src/orchestra/: __init__.py  cli.py
src/orchestra/core/: config.py  config_edit.py  cost.py  cycle.py  invoker.py  pii.py  prompt_builder.py  routing.py  runner.py  scaffold.py  transcript.py  verdict.py
src/orchestra/core/executors/: base.py  claude_stream.py  cli.py  proxy.py  test_runner.py
src/orchestra/roles/: builder.md  planner.md  tester.md
src/orchestra/rules/: 00-general.md  10-security.md  20-testing.md  30-python-playwright.md  60-git-pr.md  70-data-rgpd.md
src/orchestra/skills/: rgpd-review.md  security-review.md  self-critique.md  systematic-debugging.md
tests/: test_claude_stream.py  test_cli.py  test_config.py  test_config_edit.py  test_cost.py  test_cycle.py  test_executors.py  test_invoker.py  test_pii.py  test_prompt_builder.py  test_routing.py  test_runner.py  test_scaffold.py  test_test_runner.py  test_transcript.py  test_verdict.py
